<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/GuidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/GuidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

    <ImageView
            android:id="@+id/imgTopo"
            android:layout_width="132dp"
            android:layout_height="6dp"
            android:gravity="center"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="@id/GuidelineLeft"
            app:layout_constraintStart_toStartOf="@id/GuidelineRight"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/txtNovaTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_tarefa"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/titulo_tarefa"
            app:layout_constraintStart_toStartOf="@+id/GuidelineRight"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/imgTopo"/>

    <TextView
            android:id="@+id/txtAdicioneNovaTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_nova_tarefa"
            android:textSize="16sp"
            android:textColor="@color/titulo_tarefa"
            app:layout_constraintStart_toStartOf="@+id/GuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/txtNovaTarefa"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTituloTarefa"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorGrey"
            android:hint="@string/titulo_tarefa"
            android:textSize="16sp"
            android:textColor="@color/titulo_tarefa"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/txtAdicioneNovaTarefa"
            app:layout_constraintStart_toStartOf="@+id/GuidelineRight"
            app:layout_constraintEnd_toStartOf="@+id/GuidelineLeft"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescricaoTarefa"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toStartOf="@+id/GuidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/txtTituloTarefa"
            app:layout_constraintStart_toStartOf="@+id/GuidelineRight"
            android:background="@color/colorGrey"
            android:hint="@string/descricaotarefa"
            android:textSize="16sp"
            android:padding="10dp"
            android:gravity="top"
            android:textColor="@color/titulo_tarefa" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/opcional"
              android:textSize="12sp"
              android:textColor="@color/titulo_tarefa"
              app:layout_constraintTop_toBottomOf="@id/txtDescricaoTarefa"
              app:layout_constraintStart_toStartOf="@+id/GuidelineRight"/>

    <Button android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_criar_tarefa"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:backgroundTint="@color/color_bottom"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toStartOf="@+id/GuidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/txtDescricaoTarefa"
            app:layout_constraintStart_toStartOf="@+id/GuidelineRight"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>