<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <TextView
                android:id="@+id/textView"
                android:text="@string/tarefas"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/tab_indicator"
                app:tabTextColor="@color/titulo_tarefa"
                app:tabGravity="fill"
                app:tabIndicatorColor="@null"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/color_white"/>

        <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:nextFocusUp="@id/search"
                android:nextFocusLeft="@id/search"
                android:layout_margin="16dp"
                android:background="@drawable/tab_indicator"
                android:hint="@string/search_view"
                android:textColor="@color/titulo_tarefa"
                android:textSize="14sp"/>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:backgroundTint="@color/color_bottom"
            android:text="@string/text_bottom"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="start"
            android:textColor="@color/color_white"
            app:iconTint="@color/color_white"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>